# gnbpcap

./: .gitignore  CLAUDE.md  LICENSE  README.md  SPEC.md  app.py  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
ui/: index.html  main.js  styles.css
