[package]
name = "gnbpcap-tauri"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "1.6", features = ["dialog-open"] }
xmltree = "0.11"

[features]
custom-protocol = ["tauri/custom-protocol"]
